--- a/servant-parameters-unchained.cabal
+++ b/servant-parameters-unchained.cabal
@@ -32,11 +32,24 @@ build-type:         Simple
 extra-source-files: CHANGELOG.md
 
 library
-  build-depends:    base ^>=4.16.4.0
-  hs-source-dirs:   src
-  default-language: Haskell2010
-  ghc-options:      -Wall -Wno-redundant-constraints
+  build-depends:
+    , base
+    , bytestring
+    , http-types
+    , servant             >=0.20.0
+    , servant-server
+    , string-conversions
+    , text
+    , wai
+
+  hs-source-dirs:     src
+  default-language:   Haskell2010
+  ghc-options:        -Wall -Wno-redundant-constraints
 
   -- LANGUAGE extensions used by modules in this package.
-  other-extensions:
-  exposed-modules:
+  default-extensions:
+    ScopedTypeVariables
+    TypeApplications
+    TypeOperators
+
+  exposed-modules:    Servant.API.Parameter
