--- a/stack.yaml
+++ b/stack.yaml
@@ -30,7 +30,8 @@ resolver:
 #   - auto-update
 #   - wai
 packages:
-- .
+- core
+- server
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
