--- a/core/servant-parameters-unchained.cabal
+++ b/core/servant-parameters-unchained.cabal
@@ -33,14 +33,11 @@ build-type:         Simple
 extra-source-files: CHANGELOG.md
 
 library
-  build-depends:
-    , base
-
+  build-depends:      base
   hs-source-dirs:     src
   default-language:   Haskell2010
   ghc-options:        -Wall
 
   -- LANGUAGE extensions used by modules in this package.
   default-extensions:
-
   exposed-modules:    Servant.API.Parameters
